--- a/distribution/docs/src/main/resources/content/_architectures/_data/data-intro.adoc
+++ b/distribution/docs/src/main/resources/content/_architectures/_data/data-intro.adoc
@@ -90,7 +90,7 @@ Consult the documentation of the Catalog Provider in use for more information on
 ====
 
 Often, the `BASIC_METACARD` `MetacardType` does not provide all the functionality or attributes necessary for a specific task.
-For performance or convenience purposes, it may be necessary to create custom attributes even if others will not be aware of those attributes.
+For performance or convenience purposes, it may be necessary to create custom attributes even if others are be aware of those attributes.
 One example could be if a user wanted to optimize a search for a date field that did not fit the definition of `CREATED`, `MODIFIED`, `EXPIRATION`, or `EFFECTIVE`.
 The user could create an additional `java.util.Date` attribute in order to query the attribute separately.
 
@@ -113,7 +113,7 @@ It maintains a list of all supported `MetacardTypes` in the `CatalogFramework`, 
 The `MetacardType` is essential for a component in the `CatalogFramework` to understand how it should interpret a metacard by knowing what attributes are available in that metacard.
 
 For example, an endpoint receiving incoming metadata can perform a lookup in the `MetacardTypeRegistry` to find a corresponding `MetacardType`.
-The discovered `MetacardType` will then be used to help the endpoint populate a metacard based on the specified attributes in the `MetacardType`.
+The discovered `MetacardType` is then used to help the endpoint populate a metacard based on the specified attributes in the `MetacardType`.
 By doing this, all the incoming metadata elements can then be available for processing, cataloging, and searching by the rest of the `CatalogFramework`.
 
 `MetacardTypes` should be registered with the `MetacardTypeRegistry`.  The `MetacardTypeRegistry` makes those `MetacardTypes` available to other ${branding} `CatalogFramework` components.
@@ -138,7 +138,7 @@ The reference to this service can then be used to register new `MetacardTypes` o
 
 New `MetacardTypes` are typically registered by `CatalogProviders` or sources indicating they know how to persist, index, and query attributes from that type.
 Endpoints or `InputTransformers` typically use the lookup functionality to access a `MetacardType` based on a parameter in the incoming metadata.
-Once the appropriate `MetacardType` is discovered and obtained from the registry, the component will know how to translate incoming raw metadata into a ${branding} Metacard.
+Once the appropriate `MetacardType` is discovered and obtained from the registry, the component knows how to translate incoming raw metadata into a ${branding} Metacard.
 
 === Attributes
 
