--- a/distribution/docs/src/main/resources/content/_architectures/_plugins/tags-filter-plugin.adoc
+++ b/distribution/docs/src/main/resources/content/_architectures/_plugins/tags-filter-plugin.adoc
@@ -6,7 +6,7 @@
 :summary: Updates queries without filters.
 
 The ((Tags Filter Plugin)) updates queries without filters for tags, and adds a default tag of `resource`.
-For backwards compatibility, a filter will also be added to include metacards without any tags attribute.
+For backwards compatibility, a filter is also added to include metacards without any tags attribute.
 
 == Related Components to Tags Filter Plugin
 
