--- a/distribution/docs/src/main/resources/content/_architectures/_catalogFrameworks/catalog-framework-intro.adoc
+++ b/distribution/docs/src/main/resources/content/_architectures/_catalogFrameworks/catalog-framework-intro.adoc
@@ -56,7 +56,7 @@ As such, new capabilities can be developed independently, in a modular fashion, 
 
 === Ensuring Compatibility
 
-The Catalog API will evolve, but great care is taken to retain backwards compatibility with developed components.
+The Catalog API evolves, but great care is taken to retain backwards compatibility with developed components.
 Compatibility is reflected in version numbers.
 
 === Catalog Framework Sequence Diagrams
@@ -108,8 +108,8 @@ Similarly, for deletion of catalog entries, the delete requests call the `delete
 
 ==== Error Handling
 
-Any ingest attempts that fail inside the Catalog Framework (whether the failure comes from the Catalog Framework itself, pre-ingest plugin failures, or issues with the Catalog Provider) will be logged to a separate log file for ease of error handling.
-The file is located at `${home_directory}/data/log/ingest_error.log` and will log the Metacards that fail, their ID and Title name, and the stack trace associated with their failure.
+Any ingest attempts that fail inside the Catalog Framework (whether the failure comes from the Catalog Framework itself, pre-ingest plugin failures, or issues with the Catalog Provider) are logged to a separate log file for ease of error handling.
+The file is located at `${home_directory}/data/log/ingest_error.log` and it logs the Metacards that fail, their ID and Title name, and the stack trace associated with their failure.
 By default, successful ingest attempts are not logged.
 However, that functionality can be achieved by setting the log level of the `ingestLogger` to DEBUG (note that enabling DEBUG can cause a non-trivial performance hit).
 
@@ -161,25 +161,24 @@ The Endpoint bundle contains a Web service that exposes the interface to query f
 The Endpoint calls the `CatalogFramework` to execute the operations of its specification.
 The `CatalogFramework` relies on the `CatalogProvider` to execute the actual query.
 Optional PreQuery and PostQuery Catalog Plugins may be invoked by the `CatalogFramework` to modify the query request/response prior to the Catalog Provider processing the query request and providing the query response.
-If a `CatalogProvider` is not configured and no other remote Sources are configured, a fault will be returned.
+If a `CatalogProvider` is not configured, and no other remote Sources are configured, a fault is returned.
 It is possible to have only remote Sources configured and no local `CatalogProvider` configured and be able to execute queries to specific remote Sources by specifying the site names in the query request.
-
 
 ==== Product Caching
 
-The Catalog Framework optionally provides caching of products, so future requests to retrieve the same product will be serviced much quicker.
-If caching is enabled, each time a retrieve product request is received, the Catalog Framework will look in its cache (default location `${home_directory}/data/product-cache`) to see if the product has been cached locally.
+The Catalog Framework optionally provides caching of products, so future requests to retrieve the same product are serviced much quicker.
+If caching is enabled, each time a retrieve product request is received, the Catalog Framework looks in its cache (default location `${home_directory}/data/product-cache`) to see if the product has been cached locally.
 If it has, the product is retrieved from the local site and returned to the client, providing a much quicker turnaround because remote product retrieval and network traffic was avoided.
 If the requested product is not in the cache, the product is retrieved from the Source (local or remote) and cached locally while returning the product to the client.
 The caching to a local file of the product and the streaming of the product to the client are done simultaneously so that the client does not have to wait for the caching to complete before receiving the product.
-If errors are detected during the caching, caching of the product will be abandoned, and the product will be returned to the client.
+If errors are detected during the caching, caching of the product is abandoned, and the product is returned to the client.
 
 The Catalog Framework attempts to detect any network problems during the product retrieval, for example, long pauses where no bytes are read implying a network connection was dropped.
 (The amount of time defined as a "long pause" is configurable, with the default value being five seconds.)
-The Catalog Framework will attempt to retrieve the product up to a configurable number of times (default = three), waiting for a configurable amount of time (default = 10 seconds) between each attempt, trying to successfully retrieve the product.
+The Catalog Framework attempts to retrieve the product up to a configurable number of times (default = three), waiting for a configurable amount of time (default = 10 seconds) between each attempt, trying to successfully retrieve the product.
 If the Catalog Framework is unable to retrieve the product, an error message is returned to the client.
 
-If the admin has enabled the *Always Cache When Canceled* option, caching of the product will occur even if the client cancels the product retrieval so that future requests will be serviced quickly.
+If the admin has enabled the *Always Cache When Canceled* option, caching of the product occurs even if the client cancels the product retrieval so that future requests are serviced quickly.
 Otherwise, caching is canceled if the user cancels the product download.
 
 ==== Product Download Status
