--- a/distribution/docs/src/main/resources/content/_architectures/_plugins/metacard-groomer.adoc
+++ b/distribution/docs/src/main/resources/content/_architectures/_plugins/metacard-groomer.adoc
@@ -7,7 +7,7 @@
 
 The ((Metacard Groomer Pre-Ingest plugin)) makes modifications to `CreateRequest` and `UpdateRequest` metacards.
 
-Use this pre-ingest plugin as a convenience to apply basic rules for your metacards. 
+Use this pre-ingest plugin as a convenience to apply basic rules for your metacards.
 
 This plugin makes the following modifications when metacards are in a `CreateRequest`:
 
@@ -19,7 +19,7 @@ This plugin makes the following modifications when metacards are in a `CreateReq
 
 In an `UpdateRequest`, the same operations are performed as a `CreateRequest`, except:
 
-* If no value is provided for `Metacard.ID` in the new metacard, it will be set using the `UpdateRequest` ID if applicable.
+* If no value is provided for `Metacard.ID` in the new metacard, it is set using the `UpdateRequest` ID if applicable.
 
 == Installing the Metacard Groomer
 
