--- a/distribution/docs/src/main/resources/content/_architectures/_plugins/policy-intro.adoc
+++ b/distribution/docs/src/main/resources/content/_architectures/_plugins/policy-intro.adoc
@@ -8,5 +8,5 @@
 
 ((Policy plugins)) are invoked to set up the policy for a request/response.
 This provides an opportunity to attach custom requirements on operations or individual metacards.
-All the 'requirements' from each Policy plugin will be combined into a single policy that will be included in the request/response.
-Access plugins will be used to act on this combined policy.
+All the 'requirements' from each Policy plugin are combined into a single policy that is included in the request/response.
+Access plugins are used to act on this combined policy.
