--- a/distribution/docs/src/main/resources/content/_architectures/_resources/content-item.adoc
+++ b/distribution/docs/src/main/resources/content/_architectures/_resources/content-item.adoc
@@ -8,4 +8,4 @@
 
 ((Content Item)) is the domain object populated by the Storage Provider that represents the information about the content to be stored or content that has been stored in the Storage Provider.
 A `ContentItem` encapsulates the content's globally unique ID, mime type, and input stream (that is, the actual content).
-The unique ID of a `ContentItem` will always correspond to a Metacard ID.
+The unique ID of a `ContentItem` always corresponds to a Metacard ID.
