--- a/distribution/docs/src/main/resources/content/_architectures/_resources/url-resource-reader.adoc
+++ b/distribution/docs/src/main/resources/content/_architectures/_resources/url-resource-reader.adoc
@@ -8,13 +8,13 @@
 ((({title})))
 The `URLResourceReader` is an implementation of `ResourceReader` which is included in the ${branding} Catalog.
 It obtains a resource given an http, https, or file-based URL.
-The `URLResourceReader` will connect to the provided Resource URL and read the resource's bytes into an `InputStream`.
+The `URLResourceReader` connects to the provided Resource URL and reads the resource's bytes into an `InputStream`.
 
 [WARNING]
 ====
 When a resource linked using a file-based URL is in the product cache, the ``URLResourceReader``'s `rootResourceDirectories` is not checked when downloading.
 It is downloaded from the product cache which bypasses the `URLResourceReader`.
-For example, if path `/my/valid/path` is configured in the ``URLResourceReader``'s `rootResourceDirectories` and one downloads the product with resource-uri `file:///my/valid/path/product.txt` and then one removes `/my/valid/path` from the ``URLResourceReader``'s `rootResourceDirectories` configuration, the product will still be accessible via the product cache.
+For example, if path `/my/valid/path` is configured in the ``URLResourceReader``'s `rootResourceDirectories` and one downloads the product with resource-uri `file:///my/valid/path/product.txt` and then one removes `/my/valid/path` from the ``URLResourceReader``'s `rootResourceDirectories` configuration, the product is still accessible via the product cache.
 ====
 
 == Installing the URL Resource Reader
@@ -54,10 +54,10 @@ See <<{reference-prefix}ddf.catalog.resource.impl.URLResourceReader,URL Resource
 
 == Using the URL Resource Reader
 
-`URLResourceReader` will be used by the Catalog Framework to obtain a resource whose metacard is cataloged in the local data store.
-This particular `ResourceReader` will be chosen by the `CatalogFramework` if the requested resource's URL has a protocol of `http`, `https`, or `file`.
+`URLResourceReader` is used by the Catalog Framework to obtain a resource whose metacard is cataloged in the local data store.
+This particular `ResourceReader` is chosen by the `CatalogFramework` if the requested resource's URL has a protocol of `http`, `https`, or `file`.
 
-For example, requesting a resource with the following URL will make the Catalog Framework invoke the `URLResourceReader` for retrieval.
+For example, requesting a resource with the following URL makes the Catalog Framework invoke the `URLResourceReader` for retrieval.
 
 .Example
 [source,http]
