--- a/distribution/docs/src/main/resources/content/_architectures/_securityFramework/security-framework-intro.adoc
+++ b/distribution/docs/src/main/resources/content/_architectures/_securityFramework/security-framework-intro.adoc
@@ -8,4 +8,4 @@
 ((({title})))
 
 The ${branding} Security Framework utilizes http://shiro.apache.org/[Apache Shiro] as the underlying security framework.
-The classes mentioned in this section will have their full package name listed, to make it easy to tell which classes come with the core Shiro framework and which are added by ${branding}.
+The classes mentioned in this section have their full package name listed, to make it easy to tell which classes come with the core Shiro framework and which are added by ${branding}.
