--- a/distribution/docs/src/main/resources/content/_architectures/_securityFramework/security-pdp-authz-realm.adoc
+++ b/distribution/docs/src/main/resources/content/_architectures/_securityFramework/security-pdp-authz-realm.adoc
@@ -9,9 +9,9 @@
 ((({title})))
 
 The ${ddf-security} PDP AuthZ Realm exposes a realm service that makes decisions on authorization requests using the attributes stored within the metacard to determine if access should be granted.
-This realm can use XACML and will delegate decisions to an external processing engine if internal processing fails.
+This realm can use XACML and delegates decisions to an external processing engine if internal processing fails.
 Decisions are first made based on the "match-all" and "match-one" logic.
-Any attributes listed in the "match-all" or "match-one" sections will not be passed to the XACML processing engine and they will be matched internally.
+Any attributes listed in the "match-all" or "match-one" sections are not passed to the XACML processing engine and they are matched internally.
 It is recommended to list as many attributes as possible in these sections to avoid going out to the XACML processing engine for performance reasons.
 If it is desired that all decisions be passed to the XACML processing engine, remove all of the "match-all" and "match-one" configurations.
 The configuration below provides the mapping between user attributes and the attributes being asserted - one map exists for each type of mapping (each map may contain multiple values).
