--- a/distribution/docs/src/main/resources/content/_architectures/_transformers/kml-queryresp-xformer.adoc
+++ b/distribution/docs/src/main/resources/content/_architectures/_transformers/kml-queryresp-xformer.adoc
@@ -6,7 +6,7 @@
 :summary: Translates a query response into a KML-formatted document.
 
 The ((KML Query Response Transformer)) translates a query response into a KML-formatted document.
-The KML will contain an HTML description for each metacard that will display in the pop-up bubble in Google Earth.
+The KML contains an HTML description for each metacard that displays in the pop-up bubble in Google Earth.
 The HTML contains links to the full metadata view as well as the resource.
 
 == Installing the KML Query Response Transformer
