--- a/distribution/docs/src/main/resources/content/_architectures/_transformers/tika-mime-type-resolver.adoc
+++ b/distribution/docs/src/main/resources/content/_architectures/_transformers/tika-mime-type-resolver.adoc
@@ -10,7 +10,7 @@ The `TikaMimeTypeResolver` is a `MimeTypeResolver` that is implemented using the
 Using the Apache Tika content analysis toolkit, the `TikaMimeTypeResolver` provides support for resolving over 1300 mime types, but not all mime types yield the same quality metadata.
 
 The `TikaMimeTypeResolver` is assigned a default priority of `-1` to insure that it is always invoked last by the `MimeTypeMapper`.
-This insures that any custom `MimeTypeResolvers` that may be installed will be invoked before the `TikaMimeTypeResolver`.
+This insures that any custom `MimeTypeResolvers` that may be installed is invoked before the `TikaMimeTypeResolver`.
 
 The `TikaMimeTypeResolver` provides the bulk of the default mime type support for ${branding}.
 
